# wf-damage-calculator

./: .gitignore  Cargo.toml  README.md
src/: main.rs  manifest.rs  weapons.rs
src/damage/: impls.rs  mod.rs
src/wf_api/: manifest.rs  mod.rs  weapon.rs  weapons.rs
